Use cookie value for showing admin buttons on words

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -139,6 +139,12 @@
 
   &.hidden { display: none; }
 
+  &.hide-modify-buttons {
+    .edit, .delete, .cards-created {
+      display: none;
+    }
+  }
+
   .delete button,
   .edit a,
   .cards-created button {
