--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -15,7 +15,7 @@
     <li>f <%= heroicon "arrow-narrow-right" %> word search</li>
     <li>s <%= heroicon "arrow-narrow-right" %> user stats</li>
     <li>k <%= heroicon "arrow-narrow-right" %> next kanji</li>
-    <li>p <%= heroicon "arrow-narrow-right" %> Polly audio converter</li>
+    <li>a <%= heroicon "arrow-narrow-right" %> audio converter</li>
     <li>i <%= heroicon "arrow-narrow-right" %> import/export tools</li>
     <li>e <%= heroicon "arrow-narrow-right" %> import/export tools</li>
     <li>h <%= heroicon "arrow-narrow-right" %> keyboard shortcuts help</li>
