--- a/app/views/static_pages/content_limits.html.erb
+++ b/app/views/static_pages/content_limits.html.erb
@@ -2,13 +2,13 @@
   <h1 class="title">Content limits</h1>
 
   <p>
-    In order to prevent abuse and provide the best experience for all jpstudy users, new accounts are created with default content limits. The limits currently start at <%= User::DEFAULT_WORD_LIMIT %> words and <%= User::DEFAULT_KANJI_LIMIT %> kanji, and you will see warnings if you try to add additional content once you have reached these limits.
+    In order to prevent abuse and provide the best experience for all jpstudy users, new accounts are created with default content limits. The limits currently start at <%= User::DEFAULT_WORD_LIMIT %> words and <%= User::DEFAULT_KANJI_LIMIT %> kanji, and you will see warnings if you try to add additional content once you have reached these limits. The audio conversion tool allows <%= User::MAX_MONTHLY_AUDIO_CONVERSIONS %> conversions per calendar month.
   </p>
 
   <h3 class="title">How do I add more content?</h3>
 
   <p>
-    The default content limits are intentionally set high enough to give users plenty of headroom as they begin their studies. If you are using the site long enough that you manage to reach these limits, congrats 🎉 We are so excited for you and we will be happy to raise your limits at no additional cost. Please reach out to <a href="mailto:support@jpstudy.app">support@jpstudy.app</a> to explain how you're using the app and we will make sure you have plenty of space to achieve your study goals.
+    The default content limits are intentionally set high enough to give users plenty of headroom as they begin their studies. If you are using the site and find that you manage to reach these limits, congrats 🎉 We are so excited for you and we will be happy to raise your limits at no additional cost. Please reach out to <a href="mailto:support@jpstudy.app">support@jpstudy.app</a> to explain how you're using the app and we will make sure you have plenty of space to achieve your study goals.
   </p>
 
   <p class="contact">
