UX updates from new signup dry-run

--- a/app/views/user_mailer/confirm_subscription_email.html.erb
+++ b/app/views/user_mailer/confirm_subscription_email.html.erb
@@ -7,7 +7,7 @@
     <td>
       <a
         style="text-decoration:none;padding:8px 16px;border-radius:0.6em;border-style:solid;background-color:#3B82F6;border-color:#3B82F6;color:#fff;font-size:1em;cursor:pointer;"
-        href="<%= login_url(ref_id: @encrypted_square_customer_id) %>"
+        href="<%= login_url(ref_id: @encrypted_square_customer_id, message_id: "S02") %>"
       >
         Log in
       </a>
