--- a/app/views/words/_empty_words_message.html.erb
+++ b/app/views/words/_empty_words_message.html.erb
@@ -4,7 +4,7 @@
       Welcome! 👋 It looks like you haven't added any words yet.
     </p>
     <p>
-      Get started with <%= link_to "manual creation", new_word_path, class: "link-blue" %> or take a look at our <%= link_to "import tools", in_out_user_path(@current_user), class: "link-blue" %>.
+      Get started with <%= link_to "manual creation", new_word_path(@current_user), class: "link-blue" %> or take a look at our <%= link_to "import tools", in_out_user_path(@current_user), class: "link-blue" %>.
     </p>
   <% else %>
     <p>No matching words 🙅</p>
