--- a/app/assets/stylesheets/jpstudy/media_tools.scss
+++ b/app/assets/stylesheets/jpstudy/media_tools.scss
@@ -81,7 +81,7 @@
         color: #d1d5db;
       }
       .copied-icon {
-        color: #10B981;
+        @extend .success-green;
       }
     }
   }
