--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -290,8 +290,24 @@ footer {
   color: #DC2626;
 }
 
+.notice-orange {
+  color: #F59E0B;
+}
+
 .success-green {
   color: #10B981;
+}
+
+.purple {
+  color: #8B5CF6;
+}
+
+.pink {
+  color: #F472B6;
+}
+
+.normal-weight {
+  font-weight: 400;
 }
 
 hr {
