--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -16,6 +16,7 @@
     <li>s <%= heroicon "arrow-narrow-right" %> user stats</li>
     <li>k <%= heroicon "arrow-narrow-right" %> next kanji</li>
     <li>a <%= heroicon "arrow-narrow-right" %> audio converter</li>
+    <li>m <%= heroicon "arrow-narrow-right" %> study memos</li>
     <li>i <%= heroicon "arrow-narrow-right" %> import/export tools</li>
     <li>e <%= heroicon "arrow-narrow-right" %> import/export tools</li>
     <li>h <%= heroicon "arrow-narrow-right" %> keyboard shortcuts help</li>
