--- a/app/views/words/_new_word_button.html.erb
+++ b/app/views/words/_new_word_button.html.erb
@@ -1,6 +1,17 @@
 <%= turbo_frame_tag "new-word-form" do %>
-  <%= link_to(new_word_path(@current_user), class: "button-purple new-word") do %>
-    <%= heroicon "plus", options: { class: "create-button-icon" } %>
-    New word
+  <% if ENV["SHOW_NEW_WORD_ACTIONS"] %>
+    <div class="word-actions">
+      <%= link_to(new_word_path(@current_user), class: "group-button new-word", title: "Add a new word") do %>
+        <%= heroicon "document-add", variant: :outline, options: { class: "create-word-button-icon" } %>
+      <% end %>
+      <%= link_to(search_words_path(@current_user), class: "group-button word-search-button", title: "Search for a word", data: { turbo: false } ) do %>
+        <%= heroicon "search", variant: :outline %>
+      <% end %>
+    </div>
+  <% else %>
+    <%= link_to(new_word_path(@current_user), class: "button-purple new-word old-single-new-word-button") do %>
+      <%= heroicon "plus", options: { class: "create-button-icon" } %>
+      New word
+    <% end %>
   <% end %>
 <% end %>
