--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="word-form" data-controller="word-form">
-  <%= form_with(model: word, url: word.new_record? ? words_path(@current_user) : word_path(@current_user, word), html: { data: { turbo: use_turbo_for_word_form? } }) do |form| %>
+  <%= form_with(model: word, url: word.new_record? ? words_path(@resource_owner) : word_path(@resource_owner, word), html: { data: { turbo: use_turbo_for_word_form? } }) do |form| %>
     <div class="form-field">
       <%= form.label :japanese %>
       <%= form.text_field :japanese, required: true, autocomplete: "off", data: { lpignore: true }, autofocus: true %>
