--- a/app/views/words/search.html.erb
+++ b/app/views/words/search.html.erb
@@ -2,7 +2,7 @@
   <div class="search-form-container">
     <h1 class="page-title">Word search</h1>
     <br/>
-    <%= form_tag(words_path(@current_user), method: :get) do |form| %>
+    <%= form_tag(words_path(@resource_owner), method: :get) do |form| %>
       <div class="field">
         <%= label_tag :search, "English or Japanese" %>
         <%= text_field_tag :search, nil, type: "text", autofocus: true, required: true, maxlength: 30 %>
@@ -11,6 +11,7 @@
       <div class="actions">
         <%# name: nil prevents `commit` param from showing up in search path %>
         <%= submit_tag "Search", name: nil, class: "button-blue" %>
+        <%= link_to "Back", words_path(@resource_owner), class: "basic-button back-button" %>
       </div>
     <% end %>
   </div>
