--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -10,14 +10,17 @@
     A little scratch pad to keep notes about your studying 📝
   </p>
 
-  <div class="memo-form">
+  <div class="memo-form" data-controller="memo">
     <%= form_with(model: @memo, url: memo_path(@resource_owner, @memo)) do |form| %>
       <div class="field">
-        <%= form.rich_text_area :content %>
+        <%= form.rich_text_area :content, data: { memo_target: "content" } %>
       </div>
 
       <div class="field">
-        <%= form.submit "Save memos", class: "button-blue" %>
+        <p class="light-gray auto-save-message">
+          <small>(Auto-saves after 10s)</small>
+        <p>
+        <%= form.submit "Save memos", class: "button-blue", data: { memo_target: "saveButton", controller: "disable", disable_with_value: "Saving...", action: "disable#disableButton", disable_target: "button" } %>
       </div>
     <% end %>
   </div>
