--- a/app/assets/stylesheets/jpstudy/component_styles.scss
+++ b/app/assets/stylesheets/jpstudy/component_styles.scss
@@ -141,3 +141,58 @@
     }
   }
 }
+
+/* tooltip container */
+.tooltip-target {
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+
+/* The actual tooltip (appears on top) */
+.tooltip-target .tooltip-text {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 0.9em;
+  visibility: hidden;
+  width: fit-content;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 6px;
+  position: absolute;
+  z-index: 1;
+  /* right tooltip */
+  top: -3px;
+  left: 140%;
+}
+
+/* tooltip arrow */
+.tooltip-target .tooltip-text::after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%; /* To the left of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent #555 transparent transparent;
+}
+
+/* Toggle this class when clicking on the tooltip container (hide and show the popup) */
+.tooltip-target .show {
+  visibility: visible;
+  -webkit-animation: tooltipFadeIn 0.5s;
+  animation: tooltipFadeIn 0.5s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes tooltipFadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes tooltipFadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
